diesel_compile_tests/tests/fail/boxed_queries_require_selectable_expression_for_order.stderr
error[E0271]: type mismatch resolving `<table as AppearsInFromClause<table>>::Count == Once`
  --> tests/fail/boxed_queries_require_selectable_expression_for_order.rs:23:37
   |
23 |     users::table.into_boxed::<Pg>().order(posts::title.desc());
   |                                     ^^^^^ expected `Never`, found `Once`
   |
note: required for `posts::columns::title` to implement `AppearsOnTable<users::table>`
  --> tests/fail/boxed_queries_require_selectable_expression_for_order.rs:16:9
   |
16 |         title -> VarChar,
   |         ^^^^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 1 redundant requirement hidden
   = note: required for `diesel::expression::operators::Desc<posts::columns::title>` to implement `AppearsOnTable<users::table>`
   = note: required for `BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), FromClause<users::table>, Pg>` to implement `OrderDsl<diesel::expression::operators::Desc<posts::columns::title>>`
